[package]
name = "mursten_blocks"
version = "0.1.0"
authors = ["Nikita Zdanovitch <nzdanovitch@gmail.com>"]

[dependencies]
log = "0.4"
midir = "0.5"
mursten = { path = "../mursten" }
mursten_vulkan_backend = { path = "../mursten_vulkan_backend" }
nalgebra = "0.16"
pretty_env_logger = "0.2"
rand = "0.4"
rustyline = "1.0.0"
reqwest = "0.8.6"
time = "0.1.37"
